--- a/site/src/style/style.scss
+++ b/site/src/style/style.scss
@@ -22,6 +22,7 @@ body {
   /*background: linear-gradient(to bottom, #92FE9D, #00C9FF);*/
   background: linear-gradient(0deg,rgb(1,1,16) 0%,rgb(18,2,23) 48%,rgb(21,14,44) 100%);
   color: black;
+  overflow-x: hidden;
   font-family: "Pixelated MS Sans Serif", Geneva, Tahoma, sans-serif;
 }
 
