--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -22,13 +22,16 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <p
-      id="notice"
-      style='font-family:"Pixelated Arial"'
-      class="whitespace-nowrap fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
-    >
-      {notice && notice.slice(1, -1)}
-    </p>
+    {notice && (
+      <p
+        id="notice"
+        style='font-family:"Pixelated Arial"'
+        class="whitespace-nowrap fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
+      >
+        {notice}
+      </p>
+    )}
+
     <header class="relative max-h-[400px] top-[-50px]">
       <a href="/" aria-label="Go home">
         <Picture
