--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -14,13 +14,13 @@ const onlineCharacters = await getCharacters({
   <main class='mt-12'>
     {
       onlineCharacters && onlineCharacters.length > 0 && (
-        <section class="rounded-xl text-black text-center text-xl max-w-2xl bg-[#efefef] border-[#5c7e9e] pb-6 mx-auto border-2 border-solid outline-white outline-none outline-2 outline-offset-0">
-          <h2 class="bg-white rounded-md m-1 font-arial py-1 px-2 text-base flex gap-4 items-center justify-between">Players Online
-            <span class='level-no' style='filter: hue-rotate(94deg)'>
-              {onlineCharacters.length.toString().split('').map(num => <span class={`level-no-${num}`} />)}  
-            </span>
+        <section class="text-xl pb-6 max-w-5xl mx-auto">
+          <h2 
+            style='filter:hue-rotate(160deg)'
+            class="level-no text-white font-bold rounded-md m-1 font-arial py-1 px-2 flex justify-center text-base">
+            These gamers are online [{onlineCharacters.length.toString().split('').map(num => <span class={`level-no-${num}`} />)}]
           </h2>
-          <div class='flex flex-wrap gap-10 justify-center mx-auto mt-6'>
+          <div class='flex flex-wrap gap-5 justify-center mx-auto mt-6'>
             {onlineCharacters.map(character => {
               const {
                 Name,
@@ -33,13 +33,13 @@ const onlineCharacters = await getCharacters({
               const equips = EquippedItems.map(itemId => `{itemId:${itemId},version:64}`).join(',')
 
               return (
-                <figure class='relative group grid justify-items-center items-end'>
+                <figure class='relative group flex flex-col justify-end items-center hover:bg-[rgba(255,255,255,.25)] rounded-md transition-colors'>
                   <img
                     src={`https://maplestory.io/api/character/{itemId:${2000+ SkinColor},version:64},{itemId:${Face},version:64},{itemId:${Hair},version:64},{itemId:${12000+SkinColor},version:64},${equips}/stand1/animated?resize=1&renderMode=default&flipX=true`}
-                    alt=""
+                    alt={`${Name}'s avatar'`}
                     loading="lazy"
                   />
-                  <figcaption class="text-white font-arial text-base mt-2 bg-[#5479c4] border-solid border-white border-2 shadow-[0px_0px_3px_rgba(0,0,0,.5)] px-3 py-1 rounded-md">
+                  <figcaption class="text-white font-arial text-sm mt-2 px-3 py-1 rounded-md">
                     {Name}
                   </figcaption>
                   <CharacterPopup character={character} />
