Updated nav bar

--- a/next/src/style/globals.sass
+++ b/next/src/style/globals.sass
@@ -17,7 +17,7 @@ html
 
 body 
   display: grid
-  grid-template-rows: 0fr 0fr 1fr 0fr
+  grid-template-rows: 0fr 1fr 0fr
   min-height: 100vh
   background: linear-gradient(0deg,rgb(1,1,16) 0%,rgb(18,2,23) 48%,rgb(21,14,44) 100%)
   color: black
