--- a/next/src/style/utility.sass
+++ b/next/src/style/utility.sass
@@ -146,3 +146,14 @@
 
 .text-shad 
   text-shadow: 0px 0px 2px rgba(0, 0, 0)
+
+.link-drop-shad
+  filter: drop-shadow(0 10px 0 #101016)
+  &:hover
+    clip-path: circle(50%)
+  &:active
+    filter: drop-shadow(0 -10px 0 #101016)!important
+    clip-path: circle(50% at 32px 25px)
+
+.pixelated
+  image-rendering: pixelated
