--- a/next/src/style/utility.sass
+++ b/next/src/style/utility.sass
@@ -1,10 +1,10 @@
-.level-no 
+.level-no
   display: flex
   align-items: center
   height: 26px
   white-space: nowrap
 
-  >* 
+  >*
     background-image: url('/levelno.png')
     background-size: 220px 26px
     background-repeat: no-repeat
@@ -12,35 +12,35 @@
     width: 22px
     height: 26px
     margin-right: 2px
-  
-  .level-no-0 
+
+  .level-no-0
     background-position-x: 0
-  
-  .level-no-1 
+
+  .level-no-1
     background-position-x: -22px
-  
-  .level-no-2 
+
+  .level-no-2
     background-position-x: -44px
 
-  .level-no-3 
-    background-position-x: -66px  
+  .level-no-3
+    background-position-x: -66px
 
-  .level-no-4 
+  .level-no-4
     background-position-x: -88px
 
-  .level-no-5 
+  .level-no-5
     background-position-x: -110px
-  
-  .level-no-6 
+
+  .level-no-6
     background-position-x: -132px
-  
-  .level-no-7 
+
+  .level-no-7
     background-position-x: -154px
 
-  .level-no-8 
+  .level-no-8
     background-position-x: -176px
-  
-  .level-no-9 
+
+  .level-no-9
     background-position-x: -198px
 
 .stat
@@ -57,7 +57,7 @@
 
   &.stat-guild
     background-position-y: calc(-7px * var(--scale))
-  
+
   &.stat-job
     background-position-y: calc(-14px * var(--scale))
 
@@ -66,7 +66,7 @@
 
   &.stat-fame
     background-position-y: calc(-28px * var(--scale))
-  
+
   &.stat-rank
     background-position-y: calc(-35px * var(--scale))
 
@@ -113,47 +113,40 @@
   height: 8px
   z-index: 49
 
-.blue-gradient-top 
-  background: linear-gradient(to top, #1084ff 0%, #1084ff 10%, #128eff 11%, #128eff 20%, #1494ff 21%, #1494ff 30%, #1699ff 31%, #1699ff 40%, #189cff 41%, #189cff 50%, #1aa4ff 51%, #1aa4ff 60%, #1caaff 61%, #1caaff 70%, #20b0ff 71%, #24baff 80%, #24baff 81%, #27bfff 90%, #2ac6ff 91%, #2ac6ff 100%)
-
-.logo 
+.logo
   position: relative
   animation: MoveUpDown 4s linear infinite
   animation-timing-function: ease-in-out
 
-#notice 
+#notice
   animation: marquee 50s linear infinite
 
-@keyframes marquee 
-  0% 
+@keyframes marquee
+  0%
     text-indent: 100%
-  100% 
+  100%
     text-indent: -250%
 
-@keyframes MoveUpDown 
+@keyframes MoveUpDown
   0%, 100%
     transform: translateY(0)
   50%
     transform: translateY(25px)
 
-.error-msg:first-letter 
+.error-msg:first-letter
   text-transform: uppercase
 
-.thumbs-up-icon 
+.thumbs-up-icon
   width: 48px
   height: 48px
   background: url('https://api.iconify.design/fluent-emoji/thumbs-up.svg') no-repeat center center / contain
 
-.text-shad 
-  text-shadow: 0px 0px 2px rgba(0, 0, 0)
+.popup-transitions-transform
+  transition: transform, visibility, opacity
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+  transition-duration: 150ms
 
-.link-drop-shad
-  filter: drop-shadow(0 10px 0 #101016)
-  &:hover
-    clip-path: circle(50%)
-  &:active
-    filter: drop-shadow(0 -10px 0 #101016)!important
-    clip-path: circle(50% at 32px 25px)
-
-.pixelated
-  image-rendering: pixelated
+.popup-transitions
+  transition: visibility, opacity
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+  transition-duration: 150ms
