Adjusted to rules

--- a/next/src/style/utility.sass
+++ b/next/src/style/utility.sass
@@ -5,7 +5,7 @@
   white-space: nowrap
 
   >*
-    background-image: url('/levelno.png')
+    background-image: url('https://raw.githubusercontent.com/GreenSoap/cool-game-3-web/master/next/public/levelno.png')
     background-size: 220px 26px
     background-repeat: no-repeat
     image-rendering: pixelated
@@ -45,7 +45,7 @@
 
 .stat
   --scale: 2
-  background-image: url('/stat.png')
+  background-image: url('https://raw.githubusercontent.com/GreenSoap/cool-game-3-web/master/next/public/stat.png')
   background-size: calc(23px * var(--scale)) calc(70px * var(--scale))
   background-repeat: no-repeat
   image-rendering: pixelated
