Adjusted styling. Added Animations. Added Patch Notes. Removed Astro Page.

--- a/next/src/style/globals.sass
+++ b/next/src/style/globals.sass
@@ -7,4 +7,14 @@ body
   grid-template-rows: 0fr 1fr 0fr
   min-height: 100vh
   background: linear-gradient(0deg,rgb(1,1,16) 0%,rgb(18,2,23) 48%,rgb(21,14,44) 100%)
+  background-attachment: fixed
   font-family: "Pixelated Arial", Geneva, Tahoma, sans-serif
+
+.patch-note
+  h1, h2, h3, h4
+    text-align: center
+  h1, h2, h3, h4, strong, a
+    color: #e2e1e1!important
+
+  a:hover
+    color: white!important
