--- a/next/src/style/globals.sass
+++ b/next/src/style/globals.sass
@@ -2,6 +2,7 @@
 @tailwind utilities
 
 
+
 body 
   display: grid
   grid-template-rows: 0fr 1fr 0fr
@@ -10,6 +11,10 @@ body
   background-attachment: fixed
   font-family: "Pixelated Arial", Geneva, Tahoma, sans-serif
 
+  cursor: url('/cursor/hand.ico'), pointer
+
+input
+  cursor: url('/cursor/select.cur'), pointer
 .patch-note
   h1, h2, h3, h4
     text-align: center
